force-app/main/default/objects/CWS_Error_Log__c/CWS_Error_Log__c.object-meta.xml
<CustomObject>
    <description>Used to log the details of the application exception</description>
    <label>Error Log</label>
    <nameField>
        <displayFormat>EL-{000000000}</displayFormat>
        <label>Log ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Error Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>