force-app/main/default/objects/CWS_Error_Log__c/fields/CWS_Class_Name__c.field-meta.xml
<CustomField>
    <fullName>CWS_Class_Name__c</fullName>
    <description>Class name from which the exception is invoked</description>
    <inlineHelpText>Class name from which the exception is invoked</inlineHelpText>
    <label>Class Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>