force-app/main/default/objects/CWS_Error_Log__c/fields/CWS_Context__c.field-meta.xml
<CustomField>
    <fullName>CWS_Context__c</fullName>
    <label>Context</label>
    <length>255</length>
    <type>Text</type>
</CustomField>