force-app/main/default/objects/CWS_Error_Log__c/fields/CWS_Error_Cause__c.field-meta.xml
<CustomField>
    <fullName>CWS_Error_Cause__c</fullName>
    <description>Cause extracted from the exception</description>
    <inlineHelpText>Cause extracted from the exception</inlineHelpText>
    <label>Error Cause</label>
    <length>255</length>
    <type>Text</type>
</CustomField>