force-app/main/default/objects/CWS_Error_Log__c/fields/CWS_Error_Description__c.field-meta.xml
<CustomField>
    <fullName>CWS_Error_Description__c</fullName>
    <description>Error Description</description>
    <inlineHelpText>Error Description</inlineHelpText>
    <label>Error Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>