force-app/main/default/objects/CWS_Error_Log__c/fields/CWS_Error_Line_Number__c.field-meta.xml
<CustomField>
    <fullName>CWS_Error_Line_Number__c</fullName>
    <description>Error line number</description>
    <label>Error Line Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>