force-app/main/default/objects/CWS_Error_Log__c/fields/CWS_Error_Message__c.field-meta.xml
<CustomField>
    <fullName>CWS_Error_Message__c</fullName>
    <description>Error Message</description>
    <inlineHelpText>Error Message</inlineHelpText>
    <label>Error Message</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>