force-app/main/default/objects/CWS_Error_Log__c/fields/CWS_Error_Source__c.field-meta.xml
<CustomField>
    <fullName>CWS_Error_Source__c</fullName>
    <description>Error Source</description>
    <inlineHelpText>Error Source</inlineHelpText>
    <label>Error Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Integration</fullName>
            </value>
            <value>
                <fullName>CPQ</fullName>
            </value>
            <value>
                <fullName>Exception Handler</fullName>
            </value>
            <value>
                <fullName>CRM</fullName>
            </value>
            <value>
                <fullName>CLM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>