force-app/main/default/objects/CWS_Error_Log__c/fields/CWS_Error_Type__c.field-meta.xml
<CustomField>
    <fullName>CWS_Error_Type__c</fullName>
    <description>Error Type</description>
    <inlineHelpText>Error Type</inlineHelpText>
    <label>Error Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>