force-app/main/default/objects/CWS_Error_Log__c/fields/CWS_Integration_Error_Code__c.field-meta.xml
<CustomField>
    <fullName>CWS_Integration_Error_Code__c</fullName>
    <description>Integration Error Code</description>
    <inlineHelpText>Integration Error Code</inlineHelpText>
    <label>Integration Error Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>