force-app/main/default/objects/CWS_Error_Log__c/fields/CWS_Integration_Name__c.field-meta.xml
<CustomField>
    <fullName>CWS_Integration_Name__c</fullName>
    <description>Integration Name</description>
    <inlineHelpText>Integration Name</inlineHelpText>
    <label>Integration Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>