force-app/main/default/objects/CWS_Error_Log__c/fields/CWS_List_of_Records_Error__c.field-meta.xml
<CustomField>
    <fullName>CWS_List_of_Records_Error__c</fullName>
    <description>This field is created to capture the ID of the list of records that have failed..</description>
    <label>List of Records Error</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>