force-app/main/default/objects/CWS_Error_Log__c/fields/CWS_Method_Name__c.field-meta.xml
<CustomField>
    <fullName>CWS_Method_Name__c</fullName>
    <description>Method Name</description>
    <inlineHelpText>Method Name</inlineHelpText>
    <label>Method Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>