force-app/main/default/objects/CWS_Error_Log__c/fields/CWS_Object_Name__c.field-meta.xml
<CustomField>
    <fullName>CWS_Object_Name__c</fullName>
    <description>Object Name</description>
    <inlineHelpText>Object Name</inlineHelpText>
    <label>Object Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>