force-app/main/default/objects/CWS_Error_Log__c/fields/CWS_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>CWS_Record_Id__c</fullName>
    <description>Record Id</description>
    <inlineHelpText>Record Id</inlineHelpText>
    <label>Record Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>