force-app/main/default/objects/CWS_Error_Log__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>OBJECT_ID</columns>
    <columns>CWS_Context__c</columns>
    <columns>CWS_Error_Message__c</columns>
    <columns>CWS_Error_Description__c</columns>
    <columns>CWS_Error_Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>